--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
-<script>
-
-game();
-
-
-function game(){
-for(let i = 0;i<5;i++){
-const computerSelection = computerPlay();
-const playerSelection = prompt("Enter rock paper or scissors:");
-
-console.log(playRound(playerSelection,computerSelection));
-}
-}
-function computerPlay(){
-return Math.floor(Math.random() * 3) + 1
-}
-function playRound(playerSelection,computerSelection){
-if(playerSelection == computerSelection){
-	return("Tie game");
-}else if(playerSelection == 1 && computerSelection == 3 || playerSelection == 2 && computerSelection == 1 || playerSelection == 3 && computerSelection == 2){
-	return("You Win!");
-}else{
-	return("You Lose...");
-}
-}
-function setPlayer(p){
-p.toUpperCase();
-if(p == "ROCK"){
-	return 1;
-}else if(p == "PAPER"){
-	return 2;
-}else if(p == "SCISSORS"){
-	return 3;
-}else{
-return setPlayer(prompt("Enter rock paper or scissors:"));
-}
-}
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Rock Paper Scissors!</title>
+</head>
+<body>
+<button id = "rock">Rock</button>
+<button id = "paper">Paper</button>
+<button id = "scissors">Scissors</button>
+<div class ="results">
+ 
+</div>
+</body>
+	<script src = "script.js"></script>
+</html>
